// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsBar matches last snapshot 1`] = `
<div
  data-stylename="actionsBar"
>
  <div
    data-stylename="actions"
  >
    <Connect(UploadAttachmentButton)
      allowMultiple={true}
      attachmentType="image"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <Icon
        data-stylename="action-icon"
        name="AddImage"
      />
    </Connect(UploadAttachmentButton)>
    <Connect(UploadAttachmentButton)
      allowMultiple={true}
      attachmentType="file"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <Icon
        data-stylename="action-icon"
        name="Paperclip"
      />
    </Connect(UploadAttachmentButton)>
  </div>
  <Button
    color="green"
    data-stylename="postButton"
    disabled={false}
    label="Save"
    onClick={[Function]}
  />
</div>
`;

exports[`ActionsBar matches last snapshot while loading 1`] = `
<div
  data-stylename="actionsBar"
>
  <div
    data-stylename="actions"
  >
    <Connect(UploadAttachmentButton)
      allowMultiple={true}
      attachmentType="image"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <Icon
        data-stylename="action-icon"
        name="AddImage"
      />
    </Connect(UploadAttachmentButton)>
    <Connect(UploadAttachmentButton)
      allowMultiple={true}
      attachmentType="file"
      id={1}
      onSuccess={[Function]}
      type="post"
    >
      <Icon
        data-stylename="action-icon"
        name="Paperclip"
      />
    </Connect(UploadAttachmentButton)>
  </div>
  <Button
    color="green"
    data-stylename="postButton"
    disabled={true}
    label="Posting..."
    onClick={[Function]}
  />
</div>
`;

exports[`PostEditor editing a post form in editing mode 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="request"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                request
              </span>
               
              <Icon
                data-stylename="icon icon-request"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="What are you looking for help with?"
        type="text"
        value="valid title"
      />
      <ForwardRef(HyloTipTapEditor)
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <LinkPreview
    linkPreview={
      Object {
        "id": "1",
        "title": "a link",
      }
    }
    onClose={[Function]}
    onFeatured={[Function]}
  />
  <Connect(AttachmentManager)
    attachmentType="image"
    id="test"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    id="test"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={
            Array [
              Object {
                "id": "1",
                "name": "test group 1",
              },
              Object {
                "id": "2",
                "name": "test group 2",
              },
            ]
          }
          onChange={[Function]}
          selectedTopics={
            Array [
              Object {
                "name": "design",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={
            Array [
              Object {
                "id": "1",
                "name": "test group 1",
              },
              Object {
                "id": "2",
                "name": "test group 2",
              },
            ]
          }
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Timeframe
      </div>
      <div
        data-stylename="datePickerModule"
      >
        <DatePicker
          onChange={[Function]}
          placeholder="Select Start"
          value={"2019-03-06T21:41:23.315Z"}
        />
        <div
          data-stylename="footerSection-helper"
        >
          To
        </div>
        <DatePicker
          onChange={[Function]}
          placeholder="Select End"
          value={"2019-03-06T21:41:23.315Z"}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your request located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={2}
      groups={
        Array [
          Object {
            "id": "1",
            "name": "test group 1",
          },
          Object {
            "id": "2",
            "name": "test group 2",
          },
        ]
      }
      id="test"
      loading={false}
      save={[Function]}
      setAnnouncement={[MockFunction]}
      submitButtonLabel="Save"
      toggleAnnouncementModal={[Function]}
      valid={true}
    />
  </div>
</div>
`;

exports[`PostEditor editing a post post is loaded into fields 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="request"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                request
              </span>
               
              <Icon
                data-stylename="icon icon-request"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="What are you looking for help with?"
        type="text"
        value="valid title"
      />
      <ForwardRef(HyloTipTapEditor)
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <LinkPreview
    linkPreview={
      Object {
        "id": "1",
        "title": "a link",
      }
    }
    onClose={[Function]}
    onFeatured={[Function]}
  />
  <Connect(AttachmentManager)
    attachmentType="image"
    id="test"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    id="test"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={
            Array [
              Object {
                "id": "1",
                "name": "test group 1",
              },
              Object {
                "id": "2",
                "name": "test group 2",
              },
            ]
          }
          onChange={[Function]}
          selectedTopics={
            Array [
              Object {
                "name": "design",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={
            Array [
              Object {
                "id": "1",
                "name": "test group 1",
              },
              Object {
                "id": "2",
                "name": "test group 2",
              },
            ]
          }
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Timeframe
      </div>
      <div
        data-stylename="datePickerModule"
      >
        <DatePicker
          onChange={[Function]}
          placeholder="Select Start"
          value={"2019-03-06T21:41:23.315Z"}
        />
        <div
          data-stylename="footerSection-helper"
        >
          To
        </div>
        <DatePicker
          onChange={[Function]}
          placeholder="Select End"
          value={"2019-03-06T21:41:23.315Z"}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your request located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={2}
      groups={
        Array [
          Object {
            "id": "1",
            "name": "test group 1",
          },
          Object {
            "id": "2",
            "name": "test group 2",
          },
        ]
      }
      id="test"
      loading={false}
      save={[Function]}
      setAnnouncement={[MockFunction]}
      submitButtonLabel="Save"
      toggleAnnouncementModal={[Function]}
      valid={true}
    />
  </div>
</div>
`;

exports[`PostEditor editing a post saving a post will update a post 1`] = `
Array [
  Array [
    Object {
      "acceptContributions": undefined,
      "details": undefined,
      "endTime": "2019-03-06T21:41:23.315Z",
      "eventInviteeIds": undefined,
      "fileUrls": undefined,
      "groups": Array [
        Object {
          "id": "1",
          "name": "test group 1",
        },
        Object {
          "id": "2",
          "name": "test group 2",
        },
      ],
      "id": "test",
      "imageUrls": undefined,
      "isPublic": undefined,
      "linkPreview": Object {
        "id": "1",
        "title": "a link",
      },
      "linkPreviewFeatured": undefined,
      "location": undefined,
      "locationId": "555",
      "memberIds": undefined,
      "sendAnnouncement": undefined,
      "startTime": "2019-03-06T21:41:23.315Z",
      "title": "valid title",
      "topicNames": Array [
        "design",
      ],
      "type": "request",
    },
  ],
]
`;

exports[`PostEditor for a new post correct title placeholder and type button selection for "discussion" type 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="discussion placeholder"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor for a new post correct title placeholder and type button selection for "offer" type 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="offer"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                offer
              </span>
               
              <Icon
                data-stylename="icon icon-offer"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="offer placeholder"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Timeframe
      </div>
      <div
        data-stylename="datePickerModule"
      >
        <DatePicker
          onChange={[Function]}
          placeholder="Select Start"
          value={"2019-03-06T21:41:23.315Z"}
        />
        <div
          data-stylename="footerSection-helper"
        >
          To
        </div>
        <DatePicker
          onChange={[Function]}
          placeholder="Select End"
          value={"2019-03-06T21:41:23.315Z"}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your offer located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor for a new post correct title placeholder and type button selection for "request" type 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="request"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                request
              </span>
               
              <Icon
                data-stylename="icon icon-request"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="request placeholder"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Timeframe
      </div>
      <div
        data-stylename="datePickerModule"
      >
        <DatePicker
          onChange={[Function]}
          placeholder="Select Start"
          value={"2019-03-06T21:41:23.315Z"}
        />
        <div
          data-stylename="footerSection-helper"
        >
          To
        </div>
        <DatePicker
          onChange={[Function]}
          placeholder="Select End"
          value={"2019-03-06T21:41:23.315Z"}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your request located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor for a new post correct title placeholder and type button selection for "resource" type 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="resource"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                resource
              </span>
               
              <Icon
                data-stylename="icon icon-resource"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="resource placeholder"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Describe the resource that is available"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Timeframe
      </div>
      <div
        data-stylename="datePickerModule"
      >
        <DatePicker
          onChange={[Function]}
          placeholder="Select Start"
          value={"2019-03-06T21:41:23.315Z"}
        />
        <div
          data-stylename="footerSection-helper"
        >
          To
        </div>
        <DatePicker
          onChange={[Function]}
          placeholder="Select End"
          value={"2019-03-06T21:41:23.315Z"}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your resource located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor for a new post initial prompt and placeholders 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="a test title placeholder"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        contentHTML=""
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor for a new post saving a post will create a new post 1`] = `
Array [
  Array [
    Object {
      "acceptContributions": undefined,
      "details": undefined,
      "endTime": "2019-03-06T21:41:23.315Z",
      "eventInviteeIds": undefined,
      "fileUrls": undefined,
      "groups": Array [
        Object {
          "id": "1",
          "name": "test group 1",
        },
        Object {
          "id": "2",
          "name": "test group 2",
        },
      ],
      "id": undefined,
      "imageUrls": undefined,
      "isPublic": undefined,
      "linkPreview": undefined,
      "linkPreviewFeatured": undefined,
      "location": undefined,
      "locationId": "666",
      "memberIds": undefined,
      "sendAnnouncement": undefined,
      "startTime": "2019-03-06T21:41:23.315Z",
      "title": "valid title",
      "topicNames": Array [
        "design",
      ],
      "type": "offer",
    },
  ],
]
`;

exports[`PostEditor post is defaulted while loading editor 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={true}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={true}
        maxLength={50}
        onChange={[Function]}
        placeholder="What’s on your mind?"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        contentHTML=""
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={true}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={true}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={true}
      save={[Function]}
      submitButtonLabel="Save"
      toggleAnnouncementModal={[Function]}
      valid={true}
    />
  </div>
</div>
`;

exports[`PostEditor post is defaulted while loading editor for NEW post 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={true}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={true}
        maxLength={50}
        onChange={[Function]}
        placeholder="What’s on your mind?"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        contentHTML=""
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={true}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={true}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={true}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor renders announcement option with admin in props 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="What’s on your mind?"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        contentHTML=""
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      canModerate={true}
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor renders contribution button 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="What’s on your mind?"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        contentHTML=""
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Project Members
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <Connect(MemberSelector)
          forGroups={Array []}
          initialMembers={Array []}
          readOnly={false}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Accept Contributions
      </div>
      <div
        data-stylename="footerSection-groups accept-contributions"
      >
        <Switch
          data-stylename="accept-contributions-switch"
          onClick={[Function]}
        />
        <div
          data-stylename="accept-contributions-help"
        >
          If you turn 'Accept Contributions' on, people will be able to send money to your Stripe connected account to support this project.
        </div>
      </div>
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor renders with min props 1`] = `
<div
  data-stylename="wrapper"
>
  <div
    data-stylename="header"
  >
    <div
      data-stylename="initial"
    >
      <div>
        <Button
          borderRadius="5px"
          className=""
          color=""
          disabled={false}
          key="discussion"
          label={
            <span
              data-stylename="initial-prompt"
            >
              <span>
                discussion
              </span>
               
              <Icon
                data-stylename="icon icon-discussion"
                name="ArrowDown"
              />
            </span>
          }
          noDefaultStyles={true}
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    data-stylename="body"
  >
    <div
      data-stylename="body-column"
    >
      <RoundImage
        data-stylename="titleAvatar"
        medium={true}
      />
    </div>
    <div
      data-stylename="body-column"
    >
      <input
        data-stylename="titleInput"
        disabled={false}
        maxLength={50}
        onChange={[Function]}
        placeholder="What’s on your mind?"
        type="text"
        value=""
      />
      <ForwardRef(HyloTipTapEditor)
        contentHTML=""
        data-stylename="editor"
        onAddLink={[Function]}
        onAddTopic={[Function]}
        onChange={[Function]}
        onEscape={[Function]}
        placeholder="Add a description"
        readOnly={false}
      />
    </div>
  </div>
  <Connect(AttachmentManager)
    attachmentType="image"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <Connect(AttachmentManager)
    attachmentType="file"
    showAddButton={true}
    showLabel={true}
    showLoading={true}
    type="post"
  />
  <div
    data-stylename="footer"
  >
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Topics
      </div>
      <div
        data-stylename="footerSection-topics"
      >
        <Connect(TopicSelector)
          forGroups={Array []}
          onChange={[Function]}
        />
      </div>
    </div>
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label"
      >
        Post in
      </div>
      <div
        data-stylename="footerSection-groups"
      >
        <GroupsSelector
          onChange={[Function]}
          options={Array []}
          placeholder="Type group name..."
          readOnly={false}
          selected={Array []}
        />
      </div>
    </div>
    <PublicToggle
      isPublic={false}
      togglePublic={[Function]}
    />
    <div
      data-stylename="footerSection"
    >
      <div
        data-stylename="footerSection-label alignedLabel"
      >
        Location
      </div>
      <Connect(LocationInput)
        onChange={[Function]}
        placeholder="Where is your discussion located?"
        saveLocationToDB={true}
      />
    </div>
    <ActionsBar
      groupCount={0}
      groups={Array []}
      loading={false}
      save={[Function]}
      submitButtonLabel="Post"
      toggleAnnouncementModal={[Function]}
      valid={false}
    />
  </div>
</div>
`;

exports[`PostEditor saving a valid post will update a post 1`] = `
Array [
  Array [
    Object {
      "acceptContributions": undefined,
      "details": undefined,
      "endTime": "2019-03-06T21:41:23.315Z",
      "eventInviteeIds": undefined,
      "fileUrls": undefined,
      "groups": Array [
        Object {
          "id": "1",
          "name": "test group 1",
        },
        Object {
          "id": "2",
          "name": "test group 2",
        },
      ],
      "id": "test",
      "imageUrls": undefined,
      "isPublic": undefined,
      "linkPreview": Object {
        "id": "1",
        "title": "a link",
      },
      "linkPreviewFeatured": undefined,
      "location": undefined,
      "locationId": "555",
      "memberIds": undefined,
      "sendAnnouncement": undefined,
      "startTime": "2019-03-06T21:41:23.315Z",
      "title": "valid title",
      "topicNames": Array [
        "design",
      ],
      "type": "offer",
    },
  ],
]
`;
